--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Życzenia</title>
   <style>
     body {
-      background-image: url('pobrany plik.jpg');
+      background-image: url('');
       animation: blink 2s linear infinite;
     }
     
@@ -26,13 +26,12 @@
 </head>
 <body>
   <div class="centered">
-    <h1>Życzenia</h1>
-    <p>Wszystkiego najlepszego!</p>
+    <h1>Norbert</h1>
+    <p>Wszystkiego najlepszego z okazji osiemnastych urodzin!</p>
   </div>
   
   <audio autoplay loop>
     <source src="X2Download.app - Wapiesz - hehe papież tańczy (128 kbps).mp3" type="audio/mpeg">
-    Przeglądarka nie obsługuje odtwarzania audio.
   </audio>
 </body>
 </html>
